fix no hover effect on mobile devicess

--- a/resources/sass/components/main.scss
+++ b/resources/sass/components/main.scss
@@ -30,10 +30,12 @@ main {
             .blog {
                 background-color: #ffffff;
                 margin-bottom: 15px;
-                &:hover {
-                    transition: 0.5s;
-                    transform: scale(1.1);
-                    border: 1px solid #000000;
+                @media screen and (min-width: 1050px) {
+                    &:hover {
+                        transition: 0.5s;
+                        transform: scale(1.1);
+                        border: 1px solid #000000;
+                    }
                 }
                 
                 .blog-img-container {
